	* fix GIL issue in python bindings. Deprecated extension support in python
	* fixed bug where setting upload slots to -1 would not mean infinite
	* extend the UDP tracker protocol to include the request string from the tracker URL
	* fix mingw build for linux crosscompiler

0.16.3 release

	* fix python binding backwards compatibility in replace_trackers
	* fix possible starvation in metadata extension
	* fix crash when creating torrents and optimizing file order with pad files
	* disable support for large MTUs in uTP until it is more reliable
	* expose post_torrent_updates and state_update_alert to python bindings
	* fix incorrect SSL error messages
	* fix windows build of shared library with openssl
	* fix race condition causing shutdown hang

0.16.2 release

	* fix permissions issue on linux with noatime enabled for non-owned files
	* use random peer IDs in anonymous mode
	* fix move_storage bugs
	* fix unnecessary dependency on boost.date_time when building boost.asio as separate compilation
	* always use SO_REUSEADDR and deprecate the flag to turn it on
	* add python bindings for SSL support
	* minor uTP tweaks
	* fix end-game mode issue when some files are selected to not be downloaded
	* improve uTP slow start
	* make uTP less aggressive resetting cwnd when idle

0.16.1 release

	* fixed crash when providing corrupt resume data
	* fixed support for boost-1.44
	* fixed reversed semantics of queue_up() and queue_down()
	* added missing functions to python bindings (file_priority(), set_dht_settings())
	* fixed low_prio_disk support on linux
	* fixed time critical piece accounting in the request queue
	* fixed semantics of rate_limit_utp to also ignore per-torrent limits
	* fixed piece sorting bug of deadline pieces
	* fixed python binding build on Mac OS and BSD
	* fixed UNC path normalization (on windows, unless UNC paths are disabled)
	* fixed possible crash when enabling multiple connections per IP